# Interactive-Graphics

./: .gitignore  build.ps1
shaders/: light.frag  light.vert  shader.frag  shader.vert  shader2.frag
src/: CMakeLists.txt  main.cpp
src/core/: Camera.cpp  Camera.hpp
src/graphics/lightning/: Light.cpp  Light.hpp
src/graphics/renderer/: ElementBuffer.cpp  ElementBuffer.hpp  Load.cpp  Load.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
